# ltsp-setup

./: README.md  pyproject.toml
client/: client-post-install.txt  setup.sh
common/: common.sh
server/: post-install.txt  server-1.sh  server-2.sh  server-3.sh  server-controller.sh  server-post-install.txt  setup.sh
shell/server/: setup.sh
src/ltsp_setup/: __init__.py  common.py  main.py  server.py
src/ltsp_setup/config/: mirrors.py  networking.py
src/ltsp_setup/data/: etc_hosts.txt  etc_netplan_ltsp.yaml  official-package-repositories.txt
