[project]
name = "ltsp-setup"
version = "0.1.0"
description = "Scripts to simplify setting up ltsp"
authors = [
    {name = "Todd O'Bryan",email = "toddobryan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["classifiers", "dependencies"]

[project.scripts]
ltsp-setup = "ltsp_setup.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.17.1"
poetry-core = "^2.1.3"


[tool.poetry.dependencies]
black = "^25.1.0"
rich = "^14.1.0"
typer = "^0.17.4"
